--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,5 +1,5 @@
 .about {
-  height: calc(100vh - 120px);
+  /* height: calc(100vh - 120px); */
   padding: 60px;
   display: flex;
   flex-direction: column;
