--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -1,11 +1,10 @@
-.project {
-
-}
+/* .project {
+} */
 
 .project .tech {
-  color: #0080FF;
+  color: #0080ff;
   padding: 3px 5px;
   margin-right: 10px;
-  border: 2px solid #0080FF;
+  border: 2px solid #0080ff;
   border-radius: 5px;
 }
