--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   color: #424242;
   margin: 0;
   padding: 0;
-  font-family: Avenir;
+  font-family: Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.5;
 }
 
@@ -17,18 +17,20 @@ li {
 
 h1 {
   font-size: 22px;
-  color: #0080FF;
+  color: #0080ff;
   font-weight: lighter;
 }
 
 h2 {
   font-size: 20px;
+
   /* color: #0080FF; */
   font-weight: lighter;
 }
 
 h3 {
   font-size: 18px;
+
   /* color: #0080FF; */
   font-weight: lighter;
 }
