--- a/src/index.css
+++ b/src/index.css
@@ -15,30 +15,37 @@ li {
   list-style: none;
 }
 
+/* Typography */
+
+h1,
+h2,
+h3 {
+  margin-bottom: 0;
+}
+
 h1 {
-  font-size: 22px;
   color: #0080ff;
+  font-size: 26px;
   font-weight: lighter;
+  letter-spacing: 3px;
 }
 
 h2 {
   font-size: 20px;
-
-  /* color: #0080FF; */
-  font-weight: lighter;
 }
 
 h3 {
   font-size: 18px;
+}
 
-  /* color: #0080FF; */
-  font-weight: lighter;
+p {
+  font-size: 14px;
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media (min-width: 600px) and (max-width: 992px) {
   h1 {
-    font-size: 28px;
+    font-size: 34px;
   }
 
   h2 {
@@ -48,12 +55,16 @@ h3 {
   h3 {
     font-size: 24px;
   }
+
+  p {
+    font-size: 16px;
+  }
 }
 
 /* Large devices (laptops/desktops, 993px and up) */
 @media (min-width: 993px) {
   h1 {
-    font-size: 34px;
+    font-size: 40px;
   }
 
   h2 {
@@ -62,5 +73,9 @@ h3 {
 
   h3 {
     font-size: 30px;
+  }
+
+  p {
+    font-size: 18px;
   }
 }
