--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -5,3 +5,56 @@
   justify-content: center;
   align-items: center;
 }
+
+.home .switch-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 15px 10px;
+  display: flex;
+  align-items: center;
+}
+
+.home .switch-container .icon {
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+}
+
+.home .switch-container .switch {
+  transform: scale(0.75);
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media (min-width: 600px) and (max-width: 992px) {
+  .home .switch-container {
+    margin: 20px 15px;
+  }
+
+  .home .switch-container .icon {
+    height: 25px;
+    width: 25px;
+    margin: 0 10px;
+  }
+
+  .home .switch-container .switch {
+    transform: scale(0.85);
+  }
+}
+
+/* Large devices (laptops/desktops, 993px and up) */
+@media (min-width: 993px) {
+  .home .switch-container {
+    margin: 25px 20px;
+  }
+
+  .home .switch-container .icon {
+    height: 30px;
+    width: 30px;
+    margin: 0 10px;
+  }
+
+  .home .switch-container .switch {
+    transform: scale(1);
+  }
+}
