--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,17 +1,5 @@
 .projects {
-  padding: 50px 35px;
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media (min-width: 600px) and (max-width: 992px) {
-  .projects {
-    padding: 50px 50px;
-  }
-}
-
-/* Large devices (laptops/desktops, 993px and up) */
-@media (min-width: 993px) {
-  .projects {
-    padding: 50px 200px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
